# lol-sound

./: .gitignore  Cargo.toml
src/: main.rs  read_cfg.rs
