[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde_json = "1.0.114"
rand = "0.8.5"
sysinfo = "0.30.5"
tokio = { version = "1.36.0", features = ["full"] }
rodio = "0.17.3"
